--- a/bundles/ilg.gnumcueclipse.debug.gdbjtag/plugin.properties
+++ b/bundles/ilg.gnumcueclipse.debug.gdbjtag/plugin.properties
@@ -18,3 +18,8 @@ preferences.peripherals=MCU Peripherals Views
 
 properties.svd.tab.name=SVD Path
 properties.svd.page.name=SVD Path
+
+preferences.workspaceRegisterList=Workspace Register List
+preferences.globalRegisterList=Global Register List
+
+properties.registerlist=Register List
