FSTU-44 & FADU-100 Add pref for max hw breakpoints
Added global, workspace, project, and launch config settings for
specifying the maximum number of hardware breakpoints on the target.

--- a/bundles/ilg.gnumcueclipse.debug.gdbjtag/plugin.properties
+++ b/bundles/ilg.gnumcueclipse.debug.gdbjtag/plugin.properties
@@ -21,5 +21,8 @@ properties.svd.page.name=SVD Path
 
 preferences.workspaceRegisterList=Workspace Register List
 preferences.globalRegisterList=Global Register List
-
 properties.registerlist=Register List
+
+preferences.workspaceHwBreakpointLimit=Workspace HW Breakpoint Limit
+preferences.globalHwBreakpointLimit=Global HW Breakpoint Limit
+properties.HwBreakpointLimit=HW Breakpoint Limit
