--- a/bundles/ilg.gnumcueclipse.debug.gdbjtag/plugin.xml
+++ b/bundles/ilg.gnumcueclipse.debug.gdbjtag/plugin.xml
@@ -159,6 +159,18 @@
 			id="ilg.gnumcueclipse.debug.gdbjtag.globalRegisterListPreferencePage"
 			name="%preferences.globalRegisterList">
 		</page>
+		<page
+			category="ilg.gnumcueclipse.core.ui.preferences.mcu"
+			class="ilg.gnumcueclipse.debug.gdbjtag.preferences.WorkspaceHwBreakpointLimitPage"
+			id="ilg.gnumcueclipse.debug.gdbjtag.workspaceHwBreakpointLimitPage"
+			name="%preferences.workspaceHwBreakpointLimit">
+		</page>
+		<page
+			category="ilg.gnumcueclipse.core.ui.preferences.mcu"
+			class="ilg.gnumcueclipse.debug.gdbjtag.preferences.GlobalHwBreakpointLimitPage"
+			id="ilg.gnumcueclipse.debug.gdbjtag.globalHwBreakpointLimitPage"
+			name="%preferences.globalHwBreakpointLimit">
+		</page>
 	</extension>
 
 	<extension point="org.eclipse.ui.propertyPages">
@@ -167,6 +179,24 @@
 			class="ilg.gnumcueclipse.debug.gdbjtag.ui.properties.ProjectRegisterListPage"
 			id="ilg.gnumcueclipse.debug.gdbjtag.projectRegisterListPropertiesPage"
 			name="%properties.registerlist">
+			<filter
+				name="projectNature"
+				value="org.eclipse.cdt.core.cnature">
+			</filter>
+			<enabledWhen>
+				<and>
+					<instanceof value="org.eclipse.core.resources.IProject">
+					</instanceof>
+					<test forcePluginActivation="true" property="ilg.gnumcueclipse.managedbuild.cross.isGnuMcu">
+					</test>
+				</and>
+			</enabledWhen>
+		</page>
+		<page
+			category="ilg.gnumcueclipse.core.ui.properties.mcu"
+			class="ilg.gnumcueclipse.debug.gdbjtag.ui.properties.ProjectHwBreakpointLimitPage"
+			id="ilg.gnumcueclipse.debug.gdbjtag.projectHwBreakpointLimitPropertiesPage"
+			name="%properties.HwBreakpointLimit">
 			<filter
 				name="projectNature"
 				value="org.eclipse.cdt.core.cnature">
